--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <script src="./script.js"></script>
+    <!-- <script> fetch ("https://api.nytimes.com/svc/books/v3/reviews.json?isbn=9781524763138&api-key=QufXlA6hoaa3M0mhKCFopThskTA8qxG3 ")
+        </script> -->
 </body>
 
 
