Working on basic API request from Open library

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
 </head>
 
 <body>
-    <script src="./script.js"></script>
+
+
+    
+    <!-- Jquery -->
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
+
+    <script src="./assets/script.js"></script>
     <!-- <script> fetch ("https://api.nytimes.com/svc/books/v3/reviews.json?isbn=9781524763138&api-key=QufXlA6hoaa3M0mhKCFopThskTA8qxG3 ")
         </script> -->
+    <!-- <script> fetch ("https://openlibrary.org/search.json?title=the+lord+of+the+rings"); -->
+        <!-- <script>fetch ("https://www.googleapis.com/books/v1/volumes?q=flowers+inauthor:keyes&key=AIzaSyApC_HmnBEAvRsbJdOI__0QIfXjbtebdwY");
+    </script> -->
+
+    
 </body>
 
 
