Implemented google API fetch but still needs refining

--- a/Search-Display.html
+++ b/Search-Display.html
@@ -8,11 +8,24 @@
 </head>
 
 <body>
-    <h1>Showing Results for:<span id="title-name"></span></h1>
+    <h1>Showing Information for:<span id="title-name"></span></h1>
     <div id="search-container">                    
-
+        <img id="book-cover"></img>
+        <h1 id="book-title"></h1>
+        <h3 id="book-author"></h3>
+        <p id="book-snippet"></p>
+        <p id="book-publish"></p>
+        <p id="book-genre"></p>
+        <p id="book-OLratings"></p>
+        <a id="book-OLebook"></a>
+        <p id="book-Googleratings"></p>
+        <a id="book-Googlepreview"></a>
+        <br></br>
+        <a id="book-Googlebuy"></a>
     </div>
       
+
+
     <!-- Jquery -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
@@ -25,7 +38,7 @@
      -->
 
 
-    <!-- <script> fetch ("https://api.nytimes.com/svc/books/v3/reviews.json?isbn=9781524763138&api-key=QufXlA6hoaa3M0mhKCFopThskTA8qxG3 ")
+    <!-- <script> fetch ("https://api.nytimes.com/svc/books/v3/reviews.json?author=Michelle+Obama&api-key=QufXlA6hoaa3M0mhKCFopThskTA8qxG3 ")
         </script> -->
                     <!--  NYT: reviews  -->
 
