Search based on category now working (including ISBN), refined search parameters

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
                     <button type="submit" id="submit-button">Search</button>
                         <label for="books"></label>
                         <select name="books" id="books">
-                          <option value="Title">Title</option>
-                          <option value="Author">Author</option>
-                          <option value="ISBN">ISBN</option>
+                            <option value=""></option>
+                            <option value="title">Title</option>
+                            <option value="author">Author</option>
+                            <option value="isbn">ISBN</option>
                         </select>
                     
                     </div>
@@ -56,7 +57,8 @@
     </script> -->
                     <!-- google books: average rating -->
     
-
+    <!-- <script> fetch ('https://catalog.hathitrust.org/api/volumes/full/isbn/1635574102.json')</script> -->
+    <script>fetch('https://openlibrary.org/isbn/9780140328721.json')</script>
 </body>
 
 </html>
