Refined search and search display

--- a/Search-Display.html
+++ b/Search-Display.html
@@ -13,7 +13,7 @@
         <img id="book-cover"></img>
         <h1 id="book-title"></h1>
         <h3 id="book-author"></h3>
-        <p id="book-snippet"></p>
+        <p id="book-desc"></p>
         <p id="book-publish"></p>
         <p id="book-genre"></p>
         <p id="book-OLratings"></p>
@@ -22,6 +22,8 @@
         <a id="book-Googlepreview"></a>
         <br></br>
         <a id="book-Googlebuy"></a>
+        <br></br>
+        <a id="book-NYTReview"></a>
     </div>
       
 
