saved user list working, needs debugging

--- a/Search-Display.html
+++ b/Search-Display.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <button id="back-button">Return to Front</button>
+
     <h1>Showing Information for:<span id="title-name"></span></h1>
     <div id="search-container">                    
         <img id="book-cover"></img>
