--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
                                 <option value="isbn">ISBN</option>
                             </select>
                     </form>
+                    <h5 id="local-storage">Load Saved Entries</h5>
+                    <h5 id="clear-storage">Clear Save List</h5>
+                    <div id="save-list"></div>
 
                     <h3 id="NYT-list">Need a book? Click Here for NYT Bestsellers List</h3>
                     <div id="NYT-container"></div>
 
                     <div id="search-results"></div>
-
-                    <div id="search-data"></div>
                 </div>
             </div>
         </div>
@@ -62,7 +63,7 @@
                     <!-- google books: average rating -->
     
     <!-- <script> fetch ('https://catalog.hathitrust.org/api/volumes/full/isbn/1635574102.json')</script> -->
-    <script>fetch('https://openlibrary.org/isbn/9780140328721.json')</script>
+    <!-- <script>fetch('https://openlibrary.org/isbn/9780140328721.json')</script> -->
 </body>
 
 </html>
