new changes to script.

--- a/index.html
+++ b/index.html
@@ -21,17 +21,12 @@
                           <option value="Author">Author</option>
                           <option value="ISBN">ISBN</option>
                         </select>
-                    
-                    </div>
+                   </div>
                     <div id="search-results"></div>
                     <div id="search-data"></div>
-                </div>
             </div>
         </div>
     </div>
- <script src="./script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
-
-
-
 </html>
