--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <h3 id="NYT-list">Need a book? Click Here for NYT Bestsellers List</h3>
                     <div id="NYT-container"></div>
 
-                    <div id="search-results"></div>
+                    
+                </div>
+                    <div id="search-results">
                 </div>
             </div>
         </div>
