--- a/Search-Display.html
+++ b/Search-Display.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./assets/style.css" /> -->
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Search Display</title>
 </head>
 
 <body>
     <button id="back-button">Return to Front</button>
-
-    <h1>Showing Information for:<span id="title-name"></span></h1>
-    <div id="search-container">                    
-        <img id="book-cover"></img>
-        <h1 id="book-title"></h1>
-        <h3 id="book-author"></h3>
-        <p id="book-desc"></p>
-        <p id="book-publish"></p>
-        <p id="book-genre"></p>
-        <p id="book-OLratings"></p>
-        <a id="book-OLebook"></a>
-        <p id="book-Googleratings"></p>
-        <a id="book-Googlepreview"></a>
-        <br></br>
-        <a id="book-Googlebuy"></a>
-        <br></br>
-        <a id="book-NYTReview"></a>
+    <div class="topnav">
+        <div class="search-container">
+            <div id="leftpage">
+                <h1>Showing Information for:<span id="title-name"></span></h1>
+                <img id="book-cover"></img>
+                <h1 id="book-title"></h1>
+                <h3 id="book-author"></h3>
+                <p id="book-desc"></p>
+                <p id="book-publish"></p>
+                <p id="book-genre"></p>
+            </div>
+        </div>
+        <div id="rightpage">
+            <p id="book-OLratings"></p>
+            <a id="book-OLebook"></a>
+            <p id="book-Googleratings"></p>
+            <a id="book-Googlepreview"></a>
+            <br></br>
+            <a id="book-Googlebuy"></a>
+            <br></br>
+            <a id="book-NYTReview"></a>
+        </div>
     </div>
       
 
