--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
                     
                 </div>
-                    <div id="search-results">
+                <div id="rightpage">
+                    <div id="search-results"></div>
                 </div>
             </div>
         </div>
