--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                                 <option value="isbn">ISBN</option>
                             </select>
                     </form>
-                    <h5 id="local-storage">Load Saved Entries</h5>
-                    <h5 id="clear-storage">Clear Save List</h5>
-                    <div id="save-list"></div>
+                    <h5 class="button" id="local-storage">Load Saved Entries</h5>
+                    <h5 class="button" id="clear-storage">Clear Save List</h5>
+                    <div class="button" id="save-list"></div>
 
-                    <h3 id="NYT-list">Need a book? Click Here for NYT Bestsellers List</h3>
+                    <h3 class="button" id="NYT-list">Need a book? Click Here for NYT Bestsellers List</h3>
                     <div id="NYT-container"></div>
 
                     
