--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-
     <div class="topnav">
         <div class="container-out">
             <div class="container-in">
@@ -32,6 +31,11 @@
                     <h3 class="button" id="NYT-list">Need a book? Click Here for NYT Bestsellers List</h3>
                     <div id="NYT-container"></div>
 
+                    <div id="modal">
+                        <h1>Are You Sure?</h1>
+                        <button onclick="eraseListSafe()">yes</button>
+                        <button onclick="eraseSaveList()">no</button>
+                    </div>
                     
                 </div>
                 <div id="rightpage">
