Added comments to js and html files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-out">
             <div class="container-in">
                 <div class="search-container">
-                    <p class="search-title">Search Book</p>
+                    <p class="search-title">Book Search</p>
 
                     <!-- Search bar -->
                     <form>
