Organized folder structure

--- a/Search-Display.html
+++ b/Search-Display.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Search Results</title>
 </head>
 
@@ -42,7 +42,7 @@
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
 
-    <script src="./assets/Search-Display.js"></script> 
+    <script src="./assets//js/Search-Display.js"></script> 
 
 </body>
 </html>
