--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Book Service App</title>
 </head>
 
@@ -55,7 +55,7 @@
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
 
-    <script src="./assets/index.js"></script>
+    <script src="./assets/js/index.js"></script>
 
 </body>
 </html>
